--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+body {
+  font-family: "Lobster Two", sans-serif;
+}
 @import "tailwindcss";
 @plugin "daisyui";
